# fm-api-gateway

./: .env  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_SUMMARY.md  README.md  README_TEMPLATE.md  START.md  fm-core-lib  pyproject.toml  test_gateway.sh
.github/workflows/: api-breaking-changes.yml  ci.yml  docker-publish.yml  generate-docs.yml  release-lock-openapi.yml
scripts/: generate_readme.py  lock-openapi.sh  lock_openapi.py
src/fm_api_gateway.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/gateway/: __init__.py  main.py
src/gateway/api/: __init__.py  middleware.py  openapi_aggregator.py  routes.py
src/gateway/config/: __init__.py  settings.py
src/gateway/core/: __init__.py  auth_provider.py  circuit_breaker.py  health_checker.py  rate_limiter.py  user_context.py
src/gateway/infrastructure/: __init__.py  fm_auth_provider.py  redis_client.py  supabase_provider.py
tests/unit/: test_health.py
