[tool.poetry]
name = "fm-api-gateway"
version = "1.0.0"
description = "FaultMaven API Gateway with Pluggable Authentication"
authors = ["FaultMaven Team"]
readme = "README.md"
packages = [{include = "gateway", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
httpx = "^0.28.1"
pyjwt = {extras = ["crypto"], version = "^2.9.0"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
pydantic = "^2.9.0"
pydantic-settings = "^2.6.0"
python-dotenv = "^1.0.0"
redis = "^5.0.0"

# FaultMaven Core Library
fm-core-lib = {path = "fm-core-lib", develop = true}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^4.1.0"
black = "^24.0.0"
ruff = "^0.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
